Cassandra 4, operator-sdk 0.13.0, fixed tests
- update to Go 1.13.7
- update to operator-sdk 0.13.0
- support of Cassandra 4, image built on Debian Buster and Java 11
- build scripts changed to support Cassandra 3 and 4 builds
- split k8s addons to Cassandra 3 and 4
- refactored and fixed Go e2e tests
- fixed and re-enabled GCP tests in circle-ci
- cleaned and simplified build scripts